--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.4",
     "motion": "^11.15.0",
+    "pinyin": "^4.0.0",
     "qs": "^6.12.0",
     "radix-ui": "1.1.2",
     "react": "^18.2.0",
