--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-hook-form": "7.49.1",
     "react-i18next": "13.5.0",
     "react-jwt": "^1.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "6.20.1",
     "recharts": "^2.15.1",
     "talkjs": "^0.35.0",
