--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "3.4.2",
-    "@medusajs/admin-shared": "^2.5.0",
-    "@medusajs/icons": "^2.5.0",
-    "@medusajs/js-sdk": "^2.5.0",
-    "@medusajs/ui": "~4.0.5",
+    "@medusajs/admin-shared": "^2.10.1",
+    "@medusajs/icons": "^2.10.1",
+    "@medusajs/js-sdk": "^2.10.1",
+    "@medusajs/ui": "^4.0.21",
     "@talkjs/react": "^0.1.11",
     "@tanstack/react-query": "5.64.2",
     "@tanstack/react-table": "8.20.5",
@@ -78,10 +78,10 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@medusajs/admin-shared": "^2.5.0",
-    "@medusajs/admin-vite-plugin": "^2.5.0",
-    "@medusajs/types": "^2.5.0",
-    "@medusajs/ui-preset": "^2.5.0",
+    "@medusajs/admin-vite-plugin": "^2.10.1",
+    "@medusajs/types": "^2.10.1",
+    "@medusajs/ui-preset": "^2.10.1",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20.11.15",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
@@ -92,9 +92,11 @@
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.1",
     "tsup": "^8.0.2",
+    "type-fest": "^4.41.0",
     "typescript": "5.2.2",
     "vite": "^5.4.14",
     "vite-plugin-inspect": "^0.8.7",
     "vitest": "^3.0.5"
-  }
+  },
+  "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
 }
